// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilterButton passes drawerProps onto the underlying Filter 1`] = `
<TestProvider>
  <Provider router={{...}} app={{...}} history={{...}} nextId={[Function: nextId]}>
    <MuiThemeProviderOld theme={{...}}>
      <WithStyles(inject-FilterButton-with-app) title="Filter By" model={{...}} drawerProps={{...}}>
        <inject-FilterButton-with-app title="Filter By" model={{...}} drawerProps={{...}} classes={{...}}>
          <FilterButton title="Filter By" model={{...}} drawerProps={{...}} classes={{...}} app={{...}} hideClearLink={false} clearLinkText="clear all">
            <WithStyles(ActionButton) label="Filter By" href={{...}} value={{...}} classes={{...}} onClick={[Function]}>
              <ActionButton label="Filter By" href={{...}} value={{...}} onClick={[Function]} classes={{...}}>
                <WithStyles(Button) variant="contained" classes={{...}} href={{...}} onClick={[Function]}>
                  <Button variant="contained" href={{...}} onClick={[Function]} classes={{...}} color="default" component="button" disabled={false} disableFocusRipple={false} fullWidth={false} mini={false} size="medium" type="button">
                    <WithStyles(ButtonBase) className="MuiButton-root-455 MuiButton-contained-466 MuiButton-raised-469 RSFActionButton-raised-451" disabled={false} focusRipple={true} focusVisibleClassName="MuiButton-focusVisible-474" href={{...}} onClick={[Function]} component="button" type="button">
                      <ButtonBase className="MuiButton-root-455 MuiButton-contained-466 MuiButton-raised-469 RSFActionButton-raised-451" disabled={false} focusRipple={true} focusVisibleClassName="MuiButton-focusVisible-474" href={{...}} onClick={[Function]} component="button" type="button" classes={{...}} centerRipple={false} disableRipple={false} disableTouchRipple={false} tabIndex="0">
                        <button className="MuiButtonBase-root-481 MuiButton-root-455 MuiButton-contained-466 MuiButton-raised-469 RSFActionButton-raised-451" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} href={{...}} onClick={[Function]}>
                          <span className="MuiButton-label-456 RSFActionButton-label-452">
                            <WithStyles(Typography) variant="button" className="RSFActionButton-caption-453">
                              <Typography variant="button" className="RSFActionButton-caption-453" theme={{...}} classes={{...}} align="inherit" color="default" gutterBottom={false} headlineMapping={{...}} noWrap={false} paragraph={false}>
                                <span className="MuiTypography-root-484 MuiTypography-button-495 RSFActionButton-caption-453">
                                  Filter By
                                </span>
                              </Typography>
                            </WithStyles(Typography)>
                            <WithStyles(Typography) variant="caption" className="RSFActionButton-value-454">
                              <Typography variant="caption" className="RSFActionButton-value-454" theme={{...}} classes={{...}} align="inherit" color="default" gutterBottom={false} headlineMapping={{...}} noWrap={false} paragraph={false}>
                                <span className="MuiTypography-root-484 MuiTypography-caption-494 RSFActionButton-value-454" />
                              </Typography>
                            </WithStyles(Typography)>
                          </span>
                          <NoSsr defer={false} fallback={{...}}>
                            <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                              <TouchRipple center={false} classes={{...}}>
                                <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-540" childFactory={[Function: childFactory]}>
                                  <span className="MuiTouchRipple-root-540" />
                                </TransitionGroup>
                              </TouchRipple>
                            </WithStyles(TouchRipple)>
                          </NoSsr>
                        </button>
                      </ButtonBase>
                    </WithStyles(ButtonBase)>
                  </Button>
                </WithStyles(Button)>
              </ActionButton>
            </WithStyles(ActionButton)>
            <WithStyles(inject-Drawer) ModalProps={{...}} classes={{...}} anchor="bottom" title={{...}} open={false} onRequestClose={[Function: bound ]}>
              <inject-Drawer ModalProps={{...}} anchor="bottom" title={{...}} open={false} onRequestClose={[Function: bound ]} classes={{...}}>
                <Drawer ModalProps={{...}} anchor="bottom" title={{...}} open={false} onRequestClose={[Function: bound ]} classes={{...}} amp={false} ampStateId={[undefined]} showCloseButton={true} autoAdjustBodyPadding={false} closeButtonProps={{...}} variant="temporary">
                  <WithStyles(Drawer) anchor="bottom" classes={{...}} amp-bind={{...}} open={false} variant="temporary" onClose={[Function: bound ]} ModalProps={{...}}>
                    <Drawer anchor="bottom" amp-bind={{...}} open={false} variant="temporary" onClose={[Function: bound ]} ModalProps={{...}} theme={{...}} classes={{...}} elevation={16} transitionDuration={{...}}>
                      <WithStyles(Modal) BackdropProps={{...}} className="MuiDrawer-root-526 RSFDrawer-root-519 MuiDrawer-modal-537" open={false} onClose={[Function: bound ]} amp-bind={{...}} keepMounted={true}>
                        <Modal BackdropProps={{...}} className="MuiDrawer-root-526 RSFDrawer-root-519 MuiDrawer-modal-537" open={false} onClose={[Function: bound ]} amp-bind={{...}} keepMounted={true} classes={{...}} BackdropComponent={[Function: WithStyles]} disableAutoFocus={false} disableBackdropClick={false} disableEnforceFocus={false} disableEscapeKeyDown={false} disablePortal={false} disableRestoreFocus={false} hideBackdrop={false} manager={{...}}>
                          <Portal container={[undefined]} disablePortal={false} onRendered={[Function]}>
                            <Portal containerInfo={{...}}>
                              <div className="mui-fixed MuiModal-root-538 MuiDrawer-root-526 RSFDrawer-root-519 MuiDrawer-modal-537 MuiModal-hidden-539" amp-bind={{...}}>
                                <WithStyles(Backdrop) open={false} onClick={[Function]} transitionDuration={{...}}>
                                  <Backdrop open={false} onClick={[Function]} transitionDuration={{...}} classes={{...}} invisible={false}>
                                    <WithTheme(Fade) in={false} timeout={{...}} onClick={[Function]}>
                                      <Fade theme={{...}} in={false} timeout={{...}} onClick={[Function]}>
                                        <Transition appear={true} onEnter={[Function]} onExit={[Function]} in={false} timeout={{...}} onClick={[Function]} mountOnEnter={false} unmountOnExit={false} enter={true} exit={true} onEntering={[Function: noop]} onEntered={[Function: noop]} onExiting={[Function: noop]} onExited={[Function: noop]}>
                                          <div className="MuiBackdrop-root-547" aria-hidden="true" style={{...}} onClick={[Function]} />
                                        </Transition>
                                      </Fade>
                                    </WithTheme(Fade)>
                                  </Backdrop>
                                </WithStyles(Backdrop)>
                                <RootRef rootRef={[Function]}>
                                  <WithTheme(Slide) in={false} direction="up" timeout={{...}} appear={false} onExited={[Function: chainedFunction]} role="document" tabIndex="-1">
                                    <Slide theme={{...}} in={false} direction="up" timeout={{...}} appear={false} onExited={[Function: chainedFunction]} role="document" tabIndex="-1">
                                      <EventListener target="window" onResize={[Function: debounced]}>
                                        <Transition onEnter={[Function]} onEntering={[Function]} onExit={[Function]} onExited={[Function]} appear={false} style={{...}} in={false} direction="up" timeout={{...}} role="document" tabIndex="-1" mountOnEnter={false} unmountOnExit={false} enter={true} exit={true} onEntered={[Function: noop]} onExiting={[Function: noop]}>
                                          <WithStyles(Paper) elevation={16} square={true} className="MuiDrawer-paper-528 RSFDrawer-paper-523 RSFFilterButton-drawer-450 MuiDrawer-paperAnchorBottom-532" style={{...}} direction="up" role="document" tabIndex="-1">
                                            <Paper elevation={16} square={true} className="MuiDrawer-paper-528 RSFDrawer-paper-523 RSFFilterButton-drawer-450 MuiDrawer-paperAnchorBottom-532" style={{...}} direction="up" role="document" tabIndex="-1" classes={{...}} component="div">
                                              <div className="MuiPaper-root-549 MuiPaper-elevation16-567 MuiDrawer-paper-528 RSFDrawer-paper-523 RSFFilterButton-drawer-450 MuiDrawer-paperAnchorBottom-532" style={{...}} direction="up" role="document" tabIndex="-1">
                                                <div className="RSFDrawer-container-521">
                                                  <WithStyles(Typography) className="RSFDrawer-title-524" variant="h6" component="div">
                                                    <Typography className="RSFDrawer-title-524" variant="h6" component="div" theme={{...}} classes={{...}} align="inherit" color="default" gutterBottom={false} headlineMapping={{...}} noWrap={false} paragraph={false}>
                                                      <div className="MuiTypography-root-484 MuiTypography-h6-501 RSFDrawer-title-524">
                                                        <Hbox justifyContent="center">
                                                          <WithStyles(Box) alignItems="center" justifyContent="center" flexDirection="row">
                                                            <Box alignItems="center" justifyContent="center" flexDirection="row" classes={{...}}>
                                                              <div className="RSFBox-root-576" style={{...}}>
                                                                <div>
                                                                  Filter By
                                                                </div>
                                                              </div>
                                                            </Box>
                                                          </WithStyles(Box)>
                                                        </Hbox>
                                                      </div>
                                                    </Typography>
                                                  </WithStyles(Typography)>
                                                  <WithStyles(Fab) color="primary" className="RSFDrawer-closeButton-520" onClick={[Function]} style={{...}} on={{...}}>
                                                    <Fab color="primary" className="RSFDrawer-closeButton-520" onClick={[Function]} style={{...}} on={{...}} classes={{...}} component="button" disabled={false} disableFocusRipple={false} size="large" type="button" variant="round">
                                                      <WithStyles(ButtonBase) className="MuiFab-root-578 MuiFab-primary-580 RSFDrawer-closeButton-520" disabled={false} focusRipple={true} focusVisibleClassName="MuiFab-focusVisible-583" onClick={[Function]} style={{...}} on={{...}} component="button" type="button">
                                                        <ButtonBase className="MuiFab-root-578 MuiFab-primary-580 RSFDrawer-closeButton-520" disabled={false} focusRipple={true} focusVisibleClassName="MuiFab-focusVisible-583" onClick={[Function]} style={{...}} on={{...}} component="button" type="button" classes={{...}} centerRipple={false} disableRipple={false} disableTouchRipple={false} tabIndex="0">
                                                          <button className="MuiButtonBase-root-481 MuiFab-root-578 MuiFab-primary-580 RSFDrawer-closeButton-520" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} onClick={[Function]} style={{...}} on={{...}}>
                                                            <span className="MuiFab-label-579">
                                                              <pure(CloseIcon)>
                                                                <CloseIcon>
                                                                  <WithStyles(SvgIcon)>
                                                                    <SvgIcon classes={{...}} color="inherit" component="svg" fontSize="default" viewBox="0 0 24 24">
                                                                      <svg className="MuiSvgIcon-root-588" focusable="false" viewBox="0 0 24 24" color={[undefined]} aria-hidden="true" role="presentation">
                                                                        <path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z" />
                                                                        <path fill="none" d="M0 0h24v24H0z" />
                                                                      </svg>
                                                                    </SvgIcon>
                                                                  </WithStyles(SvgIcon)>
                                                                </CloseIcon>
                                                              </pure(CloseIcon)>
                                                            </span>
                                                            <NoSsr defer={false} fallback={{...}}>
                                                              <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                                                                <TouchRipple center={false} classes={{...}}>
                                                                  <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-540" childFactory={[Function: childFactory]}>
                                                                    <span className="MuiTouchRipple-root-540" />
                                                                  </TransitionGroup>
                                                                </TouchRipple>
                                                              </WithStyles(TouchRipple)>
                                                            </NoSsr>
                                                          </button>
                                                        </ButtonBase>
                                                      </WithStyles(ButtonBase)>
                                                    </Fab>
                                                  </WithStyles(Fab)>
                                                  <div className="RSFDrawer-content-522" />
                                                </div>
                                              </div>
                                            </Paper>
                                          </WithStyles(Paper)>
                                        </Transition>
                                      </EventListener>
                                    </Slide>
                                  </WithTheme(Slide)>
                                </RootRef>
                              </div>
                            </Portal>
                          </Portal>
                        </Modal>
                      </WithStyles(Modal)>
                    </Drawer>
                  </WithStyles(Drawer)>
                </Drawer>
              </inject-Drawer>
            </WithStyles(inject-Drawer)>
          </FilterButton>
        </inject-FilterButton-with-app>
      </WithStyles(inject-FilterButton-with-app)>
    </MuiThemeProviderOld>
  </Provider>
</TestProvider>
`;

exports[`FilterButton renders with filters selected 1`] = `
<TestProvider>
  <Provider router={{...}} app={{...}} history={{...}} nextId={[Function: nextId]}>
    <MuiThemeProviderOld theme={{...}}>
      <WithStyles(inject-FilterButton-with-app) model={{...}}>
        <inject-FilterButton-with-app model={{...}} classes={{...}}>
          <FilterButton model={{...}} classes={{...}} app={{...}} title="Filter" drawerProps={{...}} hideClearLink={false} clearLinkText="clear all">
            <WithStyles(ActionButton) label="Filter" href={{...}} value="2 selected" classes={{...}} onClick={[Function]}>
              <ActionButton label="Filter" href={{...}} value="2 selected" onClick={[Function]} classes={{...}}>
                <WithStyles(Button) variant="contained" classes={{...}} href={{...}} onClick={[Function]}>
                  <Button variant="contained" href={{...}} onClick={[Function]} classes={{...}} color="default" component="button" disabled={false} disableFocusRipple={false} fullWidth={false} mini={false} size="medium" type="button">
                    <WithStyles(ButtonBase) className="MuiButton-root-157 MuiButton-contained-168 MuiButton-raised-171 RSFActionButton-raised-153" disabled={false} focusRipple={true} focusVisibleClassName="MuiButton-focusVisible-176" href={{...}} onClick={[Function]} component="button" type="button">
                      <ButtonBase className="MuiButton-root-157 MuiButton-contained-168 MuiButton-raised-171 RSFActionButton-raised-153" disabled={false} focusRipple={true} focusVisibleClassName="MuiButton-focusVisible-176" href={{...}} onClick={[Function]} component="button" type="button" classes={{...}} centerRipple={false} disableRipple={false} disableTouchRipple={false} tabIndex="0">
                        <button className="MuiButtonBase-root-183 MuiButton-root-157 MuiButton-contained-168 MuiButton-raised-171 RSFActionButton-raised-153" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} href={{...}} onClick={[Function]}>
                          <span className="MuiButton-label-158 RSFActionButton-label-154">
                            <WithStyles(Typography) variant="button" className="RSFActionButton-caption-155">
                              <Typography variant="button" className="RSFActionButton-caption-155" theme={{...}} classes={{...}} align="inherit" color="default" gutterBottom={false} headlineMapping={{...}} noWrap={false} paragraph={false}>
                                <span className="MuiTypography-root-186 MuiTypography-button-197 RSFActionButton-caption-155">
                                  Filter
                                </span>
                              </Typography>
                            </WithStyles(Typography)>
                            <WithStyles(Typography) variant="caption" className="RSFActionButton-value-156">
                              <Typography variant="caption" className="RSFActionButton-value-156" theme={{...}} classes={{...}} align="inherit" color="default" gutterBottom={false} headlineMapping={{...}} noWrap={false} paragraph={false}>
                                <span className="MuiTypography-root-186 MuiTypography-caption-196 RSFActionButton-value-156">
                                  2 selected
                                </span>
                              </Typography>
                            </WithStyles(Typography)>
                          </span>
                          <NoSsr defer={false} fallback={{...}}>
                            <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                              <TouchRipple center={false} classes={{...}}>
                                <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-242" childFactory={[Function: childFactory]}>
                                  <span className="MuiTouchRipple-root-242" />
                                </TransitionGroup>
                              </TouchRipple>
                            </WithStyles(TouchRipple)>
                          </NoSsr>
                        </button>
                      </ButtonBase>
                    </WithStyles(ButtonBase)>
                  </Button>
                </WithStyles(Button)>
              </ActionButton>
            </WithStyles(ActionButton)>
            <WithStyles(inject-Drawer) ModalProps={{...}} classes={{...}} anchor="bottom" title={{...}} open={false} onRequestClose={[Function: bound ]}>
              <inject-Drawer ModalProps={{...}} anchor="bottom" title={{...}} open={false} onRequestClose={[Function: bound ]} classes={{...}}>
                <Drawer ModalProps={{...}} anchor="bottom" title={{...}} open={false} onRequestClose={[Function: bound ]} classes={{...}} amp={false} ampStateId={[undefined]} showCloseButton={true} autoAdjustBodyPadding={false} closeButtonProps={{...}} variant="temporary">
                  <WithStyles(Drawer) anchor="bottom" classes={{...}} amp-bind={{...}} open={false} variant="temporary" onClose={[Function: bound ]} ModalProps={{...}}>
                    <Drawer anchor="bottom" amp-bind={{...}} open={false} variant="temporary" onClose={[Function: bound ]} ModalProps={{...}} theme={{...}} classes={{...}} elevation={16} transitionDuration={{...}}>
                      <WithStyles(Modal) BackdropProps={{...}} className="MuiDrawer-root-228 RSFDrawer-root-221 MuiDrawer-modal-239" open={false} onClose={[Function: bound ]} amp-bind={{...}} keepMounted={true}>
                        <Modal BackdropProps={{...}} className="MuiDrawer-root-228 RSFDrawer-root-221 MuiDrawer-modal-239" open={false} onClose={[Function: bound ]} amp-bind={{...}} keepMounted={true} classes={{...}} BackdropComponent={[Function: WithStyles]} disableAutoFocus={false} disableBackdropClick={false} disableEnforceFocus={false} disableEscapeKeyDown={false} disablePortal={false} disableRestoreFocus={false} hideBackdrop={false} manager={{...}}>
                          <Portal container={[undefined]} disablePortal={false} onRendered={[Function]}>
                            <Portal containerInfo={{...}}>
                              <div className="mui-fixed MuiModal-root-240 MuiDrawer-root-228 RSFDrawer-root-221 MuiDrawer-modal-239 MuiModal-hidden-241" amp-bind={{...}}>
                                <WithStyles(Backdrop) open={false} onClick={[Function]} transitionDuration={{...}}>
                                  <Backdrop open={false} onClick={[Function]} transitionDuration={{...}} classes={{...}} invisible={false}>
                                    <WithTheme(Fade) in={false} timeout={{...}} onClick={[Function]}>
                                      <Fade theme={{...}} in={false} timeout={{...}} onClick={[Function]}>
                                        <Transition appear={true} onEnter={[Function]} onExit={[Function]} in={false} timeout={{...}} onClick={[Function]} mountOnEnter={false} unmountOnExit={false} enter={true} exit={true} onEntering={[Function: noop]} onEntered={[Function: noop]} onExiting={[Function: noop]} onExited={[Function: noop]}>
                                          <div className="MuiBackdrop-root-249" aria-hidden="true" style={{...}} onClick={[Function]} />
                                        </Transition>
                                      </Fade>
                                    </WithTheme(Fade)>
                                  </Backdrop>
                                </WithStyles(Backdrop)>
                                <RootRef rootRef={[Function]}>
                                  <WithTheme(Slide) in={false} direction="up" timeout={{...}} appear={false} onExited={[Function: chainedFunction]} role="document" tabIndex="-1">
                                    <Slide theme={{...}} in={false} direction="up" timeout={{...}} appear={false} onExited={[Function: chainedFunction]} role="document" tabIndex="-1">
                                      <EventListener target="window" onResize={[Function: debounced]}>
                                        <Transition onEnter={[Function]} onEntering={[Function]} onExit={[Function]} onExited={[Function]} appear={false} style={{...}} in={false} direction="up" timeout={{...}} role="document" tabIndex="-1" mountOnEnter={false} unmountOnExit={false} enter={true} exit={true} onEntered={[Function: noop]} onExiting={[Function: noop]}>
                                          <WithStyles(Paper) elevation={16} square={true} className="MuiDrawer-paper-230 RSFDrawer-paper-225 RSFFilterButton-drawer-152 MuiDrawer-paperAnchorBottom-234" style={{...}} direction="up" role="document" tabIndex="-1">
                                            <Paper elevation={16} square={true} className="MuiDrawer-paper-230 RSFDrawer-paper-225 RSFFilterButton-drawer-152 MuiDrawer-paperAnchorBottom-234" style={{...}} direction="up" role="document" tabIndex="-1" classes={{...}} component="div">
                                              <div className="MuiPaper-root-251 MuiPaper-elevation16-269 MuiDrawer-paper-230 RSFDrawer-paper-225 RSFFilterButton-drawer-152 MuiDrawer-paperAnchorBottom-234" style={{...}} direction="up" role="document" tabIndex="-1">
                                                <div className="RSFDrawer-container-223">
                                                  <WithStyles(Typography) className="RSFDrawer-title-226" variant="h6" component="div">
                                                    <Typography className="RSFDrawer-title-226" variant="h6" component="div" theme={{...}} classes={{...}} align="inherit" color="default" gutterBottom={false} headlineMapping={{...}} noWrap={false} paragraph={false}>
                                                      <div className="MuiTypography-root-186 MuiTypography-h6-203 RSFDrawer-title-226">
                                                        <Hbox justifyContent="center">
                                                          <WithStyles(Box) alignItems="center" justifyContent="center" flexDirection="row">
                                                            <Box alignItems="center" justifyContent="center" flexDirection="row" classes={{...}}>
                                                              <div className="RSFBox-root-278" style={{...}}>
                                                                <div>
                                                                  Filter
                                                                </div>
                                                                <button className="RSFFilterButton-clear-150" onClick={[Function: onClick]}>
                                                                  clear all
                                                                </button>
                                                              </div>
                                                            </Box>
                                                          </WithStyles(Box)>
                                                        </Hbox>
                                                      </div>
                                                    </Typography>
                                                  </WithStyles(Typography)>
                                                  <WithStyles(Fab) color="primary" className="RSFDrawer-closeButton-222" onClick={[Function]} style={{...}} on={{...}}>
                                                    <Fab color="primary" className="RSFDrawer-closeButton-222" onClick={[Function]} style={{...}} on={{...}} classes={{...}} component="button" disabled={false} disableFocusRipple={false} size="large" type="button" variant="round">
                                                      <WithStyles(ButtonBase) className="MuiFab-root-280 MuiFab-primary-282 RSFDrawer-closeButton-222" disabled={false} focusRipple={true} focusVisibleClassName="MuiFab-focusVisible-285" onClick={[Function]} style={{...}} on={{...}} component="button" type="button">
                                                        <ButtonBase className="MuiFab-root-280 MuiFab-primary-282 RSFDrawer-closeButton-222" disabled={false} focusRipple={true} focusVisibleClassName="MuiFab-focusVisible-285" onClick={[Function]} style={{...}} on={{...}} component="button" type="button" classes={{...}} centerRipple={false} disableRipple={false} disableTouchRipple={false} tabIndex="0">
                                                          <button className="MuiButtonBase-root-183 MuiFab-root-280 MuiFab-primary-282 RSFDrawer-closeButton-222" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} onClick={[Function]} style={{...}} on={{...}}>
                                                            <span className="MuiFab-label-281">
                                                              <pure(CloseIcon)>
                                                                <CloseIcon>
                                                                  <WithStyles(SvgIcon)>
                                                                    <SvgIcon classes={{...}} color="inherit" component="svg" fontSize="default" viewBox="0 0 24 24">
                                                                      <svg className="MuiSvgIcon-root-290" focusable="false" viewBox="0 0 24 24" color={[undefined]} aria-hidden="true" role="presentation">
                                                                        <path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z" />
                                                                        <path fill="none" d="M0 0h24v24H0z" />
                                                                      </svg>
                                                                    </SvgIcon>
                                                                  </WithStyles(SvgIcon)>
                                                                </CloseIcon>
                                                              </pure(CloseIcon)>
                                                            </span>
                                                            <NoSsr defer={false} fallback={{...}}>
                                                              <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                                                                <TouchRipple center={false} classes={{...}}>
                                                                  <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-242" childFactory={[Function: childFactory]}>
                                                                    <span className="MuiTouchRipple-root-242" />
                                                                  </TransitionGroup>
                                                                </TouchRipple>
                                                              </WithStyles(TouchRipple)>
                                                            </NoSsr>
                                                          </button>
                                                        </ButtonBase>
                                                      </WithStyles(ButtonBase)>
                                                    </Fab>
                                                  </WithStyles(Fab)>
                                                  <div className="RSFDrawer-content-224" />
                                                </div>
                                              </div>
                                            </Paper>
                                          </WithStyles(Paper)>
                                        </Transition>
                                      </EventListener>
                                    </Slide>
                                  </WithTheme(Slide)>
                                </RootRef>
                              </div>
                            </Portal>
                          </Portal>
                        </Modal>
                      </WithStyles(Modal)>
                    </Drawer>
                  </WithStyles(Drawer)>
                </Drawer>
              </inject-Drawer>
            </WithStyles(inject-Drawer)>
          </FilterButton>
        </inject-FilterButton-with-app>
      </WithStyles(inject-FilterButton-with-app)>
    </MuiThemeProviderOld>
  </Provider>
</TestProvider>
`;

exports[`FilterButton renders with no filters selected 1`] = `
<TestProvider>
  <Provider router={{...}} app={{...}} history={{...}} nextId={[Function: nextId]}>
    <MuiThemeProviderOld theme={{...}}>
      <WithStyles(inject-FilterButton-with-app) model={{...}}>
        <inject-FilterButton-with-app model={{...}} classes={{...}}>
          <FilterButton model={{...}} classes={{...}} app={{...}} title="Filter" drawerProps={{...}} hideClearLink={false} clearLinkText="clear all">
            <WithStyles(ActionButton) label="Filter" href={{...}} value={{...}} classes={{...}} onClick={[Function]}>
              <ActionButton label="Filter" href={{...}} value={{...}} onClick={[Function]} classes={{...}}>
                <WithStyles(Button) variant="contained" classes={{...}} href={{...}} onClick={[Function]}>
                  <Button variant="contained" href={{...}} onClick={[Function]} classes={{...}} color="default" component="button" disabled={false} disableFocusRipple={false} fullWidth={false} mini={false} size="medium" type="button">
                    <WithStyles(ButtonBase) className="MuiButton-root-8 MuiButton-contained-19 MuiButton-raised-22 RSFActionButton-raised-4" disabled={false} focusRipple={true} focusVisibleClassName="MuiButton-focusVisible-27" href={{...}} onClick={[Function]} component="button" type="button">
                      <ButtonBase className="MuiButton-root-8 MuiButton-contained-19 MuiButton-raised-22 RSFActionButton-raised-4" disabled={false} focusRipple={true} focusVisibleClassName="MuiButton-focusVisible-27" href={{...}} onClick={[Function]} component="button" type="button" classes={{...}} centerRipple={false} disableRipple={false} disableTouchRipple={false} tabIndex="0">
                        <button className="MuiButtonBase-root-34 MuiButton-root-8 MuiButton-contained-19 MuiButton-raised-22 RSFActionButton-raised-4" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} href={{...}} onClick={[Function]}>
                          <span className="MuiButton-label-9 RSFActionButton-label-5">
                            <WithStyles(Typography) variant="button" className="RSFActionButton-caption-6">
                              <Typography variant="button" className="RSFActionButton-caption-6" theme={{...}} classes={{...}} align="inherit" color="default" gutterBottom={false} headlineMapping={{...}} noWrap={false} paragraph={false}>
                                <span className="MuiTypography-root-37 MuiTypography-button-48 RSFActionButton-caption-6">
                                  Filter
                                </span>
                              </Typography>
                            </WithStyles(Typography)>
                            <WithStyles(Typography) variant="caption" className="RSFActionButton-value-7">
                              <Typography variant="caption" className="RSFActionButton-value-7" theme={{...}} classes={{...}} align="inherit" color="default" gutterBottom={false} headlineMapping={{...}} noWrap={false} paragraph={false}>
                                <span className="MuiTypography-root-37 MuiTypography-caption-47 RSFActionButton-value-7" />
                              </Typography>
                            </WithStyles(Typography)>
                          </span>
                          <NoSsr defer={false} fallback={{...}}>
                            <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                              <TouchRipple center={false} classes={{...}}>
                                <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-93" childFactory={[Function: childFactory]}>
                                  <span className="MuiTouchRipple-root-93" />
                                </TransitionGroup>
                              </TouchRipple>
                            </WithStyles(TouchRipple)>
                          </NoSsr>
                        </button>
                      </ButtonBase>
                    </WithStyles(ButtonBase)>
                  </Button>
                </WithStyles(Button)>
              </ActionButton>
            </WithStyles(ActionButton)>
            <WithStyles(inject-Drawer) ModalProps={{...}} classes={{...}} anchor="bottom" title={{...}} open={false} onRequestClose={[Function: bound ]}>
              <inject-Drawer ModalProps={{...}} anchor="bottom" title={{...}} open={false} onRequestClose={[Function: bound ]} classes={{...}}>
                <Drawer ModalProps={{...}} anchor="bottom" title={{...}} open={false} onRequestClose={[Function: bound ]} classes={{...}} amp={false} ampStateId={[undefined]} showCloseButton={true} autoAdjustBodyPadding={false} closeButtonProps={{...}} variant="temporary">
                  <WithStyles(Drawer) anchor="bottom" classes={{...}} amp-bind={{...}} open={false} variant="temporary" onClose={[Function: bound ]} ModalProps={{...}}>
                    <Drawer anchor="bottom" amp-bind={{...}} open={false} variant="temporary" onClose={[Function: bound ]} ModalProps={{...}} theme={{...}} classes={{...}} elevation={16} transitionDuration={{...}}>
                      <WithStyles(Modal) BackdropProps={{...}} className="MuiDrawer-root-79 RSFDrawer-root-72 MuiDrawer-modal-90" open={false} onClose={[Function: bound ]} amp-bind={{...}} keepMounted={true}>
                        <Modal BackdropProps={{...}} className="MuiDrawer-root-79 RSFDrawer-root-72 MuiDrawer-modal-90" open={false} onClose={[Function: bound ]} amp-bind={{...}} keepMounted={true} classes={{...}} BackdropComponent={[Function: WithStyles]} disableAutoFocus={false} disableBackdropClick={false} disableEnforceFocus={false} disableEscapeKeyDown={false} disablePortal={false} disableRestoreFocus={false} hideBackdrop={false} manager={{...}}>
                          <Portal container={[undefined]} disablePortal={false} onRendered={[Function]}>
                            <Portal containerInfo={{...}}>
                              <div className="mui-fixed MuiModal-root-91 MuiDrawer-root-79 RSFDrawer-root-72 MuiDrawer-modal-90 MuiModal-hidden-92" amp-bind={{...}}>
                                <WithStyles(Backdrop) open={false} onClick={[Function]} transitionDuration={{...}}>
                                  <Backdrop open={false} onClick={[Function]} transitionDuration={{...}} classes={{...}} invisible={false}>
                                    <WithTheme(Fade) in={false} timeout={{...}} onClick={[Function]}>
                                      <Fade theme={{...}} in={false} timeout={{...}} onClick={[Function]}>
                                        <Transition appear={true} onEnter={[Function]} onExit={[Function]} in={false} timeout={{...}} onClick={[Function]} mountOnEnter={false} unmountOnExit={false} enter={true} exit={true} onEntering={[Function: noop]} onEntered={[Function: noop]} onExiting={[Function: noop]} onExited={[Function: noop]}>
                                          <div className="MuiBackdrop-root-100" aria-hidden="true" style={{...}} onClick={[Function]} />
                                        </Transition>
                                      </Fade>
                                    </WithTheme(Fade)>
                                  </Backdrop>
                                </WithStyles(Backdrop)>
                                <RootRef rootRef={[Function]}>
                                  <WithTheme(Slide) in={false} direction="up" timeout={{...}} appear={false} onExited={[Function: chainedFunction]} role="document" tabIndex="-1">
                                    <Slide theme={{...}} in={false} direction="up" timeout={{...}} appear={false} onExited={[Function: chainedFunction]} role="document" tabIndex="-1">
                                      <EventListener target="window" onResize={[Function: debounced]}>
                                        <Transition onEnter={[Function]} onEntering={[Function]} onExit={[Function]} onExited={[Function]} appear={false} style={{...}} in={false} direction="up" timeout={{...}} role="document" tabIndex="-1" mountOnEnter={false} unmountOnExit={false} enter={true} exit={true} onEntered={[Function: noop]} onExiting={[Function: noop]}>
                                          <WithStyles(Paper) elevation={16} square={true} className="MuiDrawer-paper-81 RSFDrawer-paper-76 RSFFilterButton-drawer-3 MuiDrawer-paperAnchorBottom-85" style={{...}} direction="up" role="document" tabIndex="-1">
                                            <Paper elevation={16} square={true} className="MuiDrawer-paper-81 RSFDrawer-paper-76 RSFFilterButton-drawer-3 MuiDrawer-paperAnchorBottom-85" style={{...}} direction="up" role="document" tabIndex="-1" classes={{...}} component="div">
                                              <div className="MuiPaper-root-102 MuiPaper-elevation16-120 MuiDrawer-paper-81 RSFDrawer-paper-76 RSFFilterButton-drawer-3 MuiDrawer-paperAnchorBottom-85" style={{...}} direction="up" role="document" tabIndex="-1">
                                                <div className="RSFDrawer-container-74">
                                                  <WithStyles(Typography) className="RSFDrawer-title-77" variant="h6" component="div">
                                                    <Typography className="RSFDrawer-title-77" variant="h6" component="div" theme={{...}} classes={{...}} align="inherit" color="default" gutterBottom={false} headlineMapping={{...}} noWrap={false} paragraph={false}>
                                                      <div className="MuiTypography-root-37 MuiTypography-h6-54 RSFDrawer-title-77">
                                                        <Hbox justifyContent="center">
                                                          <WithStyles(Box) alignItems="center" justifyContent="center" flexDirection="row">
                                                            <Box alignItems="center" justifyContent="center" flexDirection="row" classes={{...}}>
                                                              <div className="RSFBox-root-129" style={{...}}>
                                                                <div>
                                                                  Filter
                                                                </div>
                                                              </div>
                                                            </Box>
                                                          </WithStyles(Box)>
                                                        </Hbox>
                                                      </div>
                                                    </Typography>
                                                  </WithStyles(Typography)>
                                                  <WithStyles(Fab) color="primary" className="RSFDrawer-closeButton-73" onClick={[Function]} style={{...}} on={{...}}>
                                                    <Fab color="primary" className="RSFDrawer-closeButton-73" onClick={[Function]} style={{...}} on={{...}} classes={{...}} component="button" disabled={false} disableFocusRipple={false} size="large" type="button" variant="round">
                                                      <WithStyles(ButtonBase) className="MuiFab-root-131 MuiFab-primary-133 RSFDrawer-closeButton-73" disabled={false} focusRipple={true} focusVisibleClassName="MuiFab-focusVisible-136" onClick={[Function]} style={{...}} on={{...}} component="button" type="button">
                                                        <ButtonBase className="MuiFab-root-131 MuiFab-primary-133 RSFDrawer-closeButton-73" disabled={false} focusRipple={true} focusVisibleClassName="MuiFab-focusVisible-136" onClick={[Function]} style={{...}} on={{...}} component="button" type="button" classes={{...}} centerRipple={false} disableRipple={false} disableTouchRipple={false} tabIndex="0">
                                                          <button className="MuiButtonBase-root-34 MuiFab-root-131 MuiFab-primary-133 RSFDrawer-closeButton-73" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} onClick={[Function]} style={{...}} on={{...}}>
                                                            <span className="MuiFab-label-132">
                                                              <pure(CloseIcon)>
                                                                <CloseIcon>
                                                                  <WithStyles(SvgIcon)>
                                                                    <SvgIcon classes={{...}} color="inherit" component="svg" fontSize="default" viewBox="0 0 24 24">
                                                                      <svg className="MuiSvgIcon-root-141" focusable="false" viewBox="0 0 24 24" color={[undefined]} aria-hidden="true" role="presentation">
                                                                        <path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z" />
                                                                        <path fill="none" d="M0 0h24v24H0z" />
                                                                      </svg>
                                                                    </SvgIcon>
                                                                  </WithStyles(SvgIcon)>
                                                                </CloseIcon>
                                                              </pure(CloseIcon)>
                                                            </span>
                                                            <NoSsr defer={false} fallback={{...}}>
                                                              <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                                                                <TouchRipple center={false} classes={{...}}>
                                                                  <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-93" childFactory={[Function: childFactory]}>
                                                                    <span className="MuiTouchRipple-root-93" />
                                                                  </TransitionGroup>
                                                                </TouchRipple>
                                                              </WithStyles(TouchRipple)>
                                                            </NoSsr>
                                                          </button>
                                                        </ButtonBase>
                                                      </WithStyles(ButtonBase)>
                                                    </Fab>
                                                  </WithStyles(Fab)>
                                                  <div className="RSFDrawer-content-75" />
                                                </div>
                                              </div>
                                            </Paper>
                                          </WithStyles(Paper)>
                                        </Transition>
                                      </EventListener>
                                    </Slide>
                                  </WithTheme(Slide)>
                                </RootRef>
                              </div>
                            </Portal>
                          </Portal>
                        </Modal>
                      </WithStyles(Modal)>
                    </Drawer>
                  </WithStyles(Drawer)>
                </Drawer>
              </inject-Drawer>
            </WithStyles(inject-Drawer)>
          </FilterButton>
        </inject-FilterButton-with-app>
      </WithStyles(inject-FilterButton-with-app)>
    </MuiThemeProviderOld>
  </Provider>
</TestProvider>
`;

exports[`FilterButton uses the title prop as the label and drawer header 1`] = `
<TestProvider>
  <Provider router={{...}} app={{...}} history={{...}} nextId={[Function: nextId]}>
    <MuiThemeProviderOld theme={{...}}>
      <WithStyles(inject-FilterButton-with-app) title="Filter By" model={{...}}>
        <inject-FilterButton-with-app title="Filter By" model={{...}} classes={{...}}>
          <FilterButton title="Filter By" model={{...}} classes={{...}} app={{...}} drawerProps={{...}} hideClearLink={false} clearLinkText="clear all">
            <WithStyles(ActionButton) label="Filter By" href={{...}} value={{...}} classes={{...}} onClick={[Function]}>
              <ActionButton label="Filter By" href={{...}} value={{...}} onClick={[Function]} classes={{...}}>
                <WithStyles(Button) variant="contained" classes={{...}} href={{...}} onClick={[Function]}>
                  <Button variant="contained" href={{...}} onClick={[Function]} classes={{...}} color="default" component="button" disabled={false} disableFocusRipple={false} fullWidth={false} mini={false} size="medium" type="button">
                    <WithStyles(ButtonBase) className="MuiButton-root-306 MuiButton-contained-317 MuiButton-raised-320 RSFActionButton-raised-302" disabled={false} focusRipple={true} focusVisibleClassName="MuiButton-focusVisible-325" href={{...}} onClick={[Function]} component="button" type="button">
                      <ButtonBase className="MuiButton-root-306 MuiButton-contained-317 MuiButton-raised-320 RSFActionButton-raised-302" disabled={false} focusRipple={true} focusVisibleClassName="MuiButton-focusVisible-325" href={{...}} onClick={[Function]} component="button" type="button" classes={{...}} centerRipple={false} disableRipple={false} disableTouchRipple={false} tabIndex="0">
                        <button className="MuiButtonBase-root-332 MuiButton-root-306 MuiButton-contained-317 MuiButton-raised-320 RSFActionButton-raised-302" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} href={{...}} onClick={[Function]}>
                          <span className="MuiButton-label-307 RSFActionButton-label-303">
                            <WithStyles(Typography) variant="button" className="RSFActionButton-caption-304">
                              <Typography variant="button" className="RSFActionButton-caption-304" theme={{...}} classes={{...}} align="inherit" color="default" gutterBottom={false} headlineMapping={{...}} noWrap={false} paragraph={false}>
                                <span className="MuiTypography-root-335 MuiTypography-button-346 RSFActionButton-caption-304">
                                  Filter By
                                </span>
                              </Typography>
                            </WithStyles(Typography)>
                            <WithStyles(Typography) variant="caption" className="RSFActionButton-value-305">
                              <Typography variant="caption" className="RSFActionButton-value-305" theme={{...}} classes={{...}} align="inherit" color="default" gutterBottom={false} headlineMapping={{...}} noWrap={false} paragraph={false}>
                                <span className="MuiTypography-root-335 MuiTypography-caption-345 RSFActionButton-value-305" />
                              </Typography>
                            </WithStyles(Typography)>
                          </span>
                          <NoSsr defer={false} fallback={{...}}>
                            <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                              <TouchRipple center={false} classes={{...}}>
                                <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-391" childFactory={[Function: childFactory]}>
                                  <span className="MuiTouchRipple-root-391" />
                                </TransitionGroup>
                              </TouchRipple>
                            </WithStyles(TouchRipple)>
                          </NoSsr>
                        </button>
                      </ButtonBase>
                    </WithStyles(ButtonBase)>
                  </Button>
                </WithStyles(Button)>
              </ActionButton>
            </WithStyles(ActionButton)>
            <WithStyles(inject-Drawer) ModalProps={{...}} classes={{...}} anchor="bottom" title={{...}} open={false} onRequestClose={[Function: bound ]}>
              <inject-Drawer ModalProps={{...}} anchor="bottom" title={{...}} open={false} onRequestClose={[Function: bound ]} classes={{...}}>
                <Drawer ModalProps={{...}} anchor="bottom" title={{...}} open={false} onRequestClose={[Function: bound ]} classes={{...}} amp={false} ampStateId={[undefined]} showCloseButton={true} autoAdjustBodyPadding={false} closeButtonProps={{...}} variant="temporary">
                  <WithStyles(Drawer) anchor="bottom" classes={{...}} amp-bind={{...}} open={false} variant="temporary" onClose={[Function: bound ]} ModalProps={{...}}>
                    <Drawer anchor="bottom" amp-bind={{...}} open={false} variant="temporary" onClose={[Function: bound ]} ModalProps={{...}} theme={{...}} classes={{...}} elevation={16} transitionDuration={{...}}>
                      <WithStyles(Modal) BackdropProps={{...}} className="MuiDrawer-root-377 RSFDrawer-root-370 MuiDrawer-modal-388" open={false} onClose={[Function: bound ]} amp-bind={{...}} keepMounted={true}>
                        <Modal BackdropProps={{...}} className="MuiDrawer-root-377 RSFDrawer-root-370 MuiDrawer-modal-388" open={false} onClose={[Function: bound ]} amp-bind={{...}} keepMounted={true} classes={{...}} BackdropComponent={[Function: WithStyles]} disableAutoFocus={false} disableBackdropClick={false} disableEnforceFocus={false} disableEscapeKeyDown={false} disablePortal={false} disableRestoreFocus={false} hideBackdrop={false} manager={{...}}>
                          <Portal container={[undefined]} disablePortal={false} onRendered={[Function]}>
                            <Portal containerInfo={{...}}>
                              <div className="mui-fixed MuiModal-root-389 MuiDrawer-root-377 RSFDrawer-root-370 MuiDrawer-modal-388 MuiModal-hidden-390" amp-bind={{...}}>
                                <WithStyles(Backdrop) open={false} onClick={[Function]} transitionDuration={{...}}>
                                  <Backdrop open={false} onClick={[Function]} transitionDuration={{...}} classes={{...}} invisible={false}>
                                    <WithTheme(Fade) in={false} timeout={{...}} onClick={[Function]}>
                                      <Fade theme={{...}} in={false} timeout={{...}} onClick={[Function]}>
                                        <Transition appear={true} onEnter={[Function]} onExit={[Function]} in={false} timeout={{...}} onClick={[Function]} mountOnEnter={false} unmountOnExit={false} enter={true} exit={true} onEntering={[Function: noop]} onEntered={[Function: noop]} onExiting={[Function: noop]} onExited={[Function: noop]}>
                                          <div className="MuiBackdrop-root-398" aria-hidden="true" style={{...}} onClick={[Function]} />
                                        </Transition>
                                      </Fade>
                                    </WithTheme(Fade)>
                                  </Backdrop>
                                </WithStyles(Backdrop)>
                                <RootRef rootRef={[Function]}>
                                  <WithTheme(Slide) in={false} direction="up" timeout={{...}} appear={false} onExited={[Function: chainedFunction]} role="document" tabIndex="-1">
                                    <Slide theme={{...}} in={false} direction="up" timeout={{...}} appear={false} onExited={[Function: chainedFunction]} role="document" tabIndex="-1">
                                      <EventListener target="window" onResize={[Function: debounced]}>
                                        <Transition onEnter={[Function]} onEntering={[Function]} onExit={[Function]} onExited={[Function]} appear={false} style={{...}} in={false} direction="up" timeout={{...}} role="document" tabIndex="-1" mountOnEnter={false} unmountOnExit={false} enter={true} exit={true} onEntered={[Function: noop]} onExiting={[Function: noop]}>
                                          <WithStyles(Paper) elevation={16} square={true} className="MuiDrawer-paper-379 RSFDrawer-paper-374 RSFFilterButton-drawer-301 MuiDrawer-paperAnchorBottom-383" style={{...}} direction="up" role="document" tabIndex="-1">
                                            <Paper elevation={16} square={true} className="MuiDrawer-paper-379 RSFDrawer-paper-374 RSFFilterButton-drawer-301 MuiDrawer-paperAnchorBottom-383" style={{...}} direction="up" role="document" tabIndex="-1" classes={{...}} component="div">
                                              <div className="MuiPaper-root-400 MuiPaper-elevation16-418 MuiDrawer-paper-379 RSFDrawer-paper-374 RSFFilterButton-drawer-301 MuiDrawer-paperAnchorBottom-383" style={{...}} direction="up" role="document" tabIndex="-1">
                                                <div className="RSFDrawer-container-372">
                                                  <WithStyles(Typography) className="RSFDrawer-title-375" variant="h6" component="div">
                                                    <Typography className="RSFDrawer-title-375" variant="h6" component="div" theme={{...}} classes={{...}} align="inherit" color="default" gutterBottom={false} headlineMapping={{...}} noWrap={false} paragraph={false}>
                                                      <div className="MuiTypography-root-335 MuiTypography-h6-352 RSFDrawer-title-375">
                                                        <Hbox justifyContent="center">
                                                          <WithStyles(Box) alignItems="center" justifyContent="center" flexDirection="row">
                                                            <Box alignItems="center" justifyContent="center" flexDirection="row" classes={{...}}>
                                                              <div className="RSFBox-root-427" style={{...}}>
                                                                <div>
                                                                  Filter By
                                                                </div>
                                                              </div>
                                                            </Box>
                                                          </WithStyles(Box)>
                                                        </Hbox>
                                                      </div>
                                                    </Typography>
                                                  </WithStyles(Typography)>
                                                  <WithStyles(Fab) color="primary" className="RSFDrawer-closeButton-371" onClick={[Function]} style={{...}} on={{...}}>
                                                    <Fab color="primary" className="RSFDrawer-closeButton-371" onClick={[Function]} style={{...}} on={{...}} classes={{...}} component="button" disabled={false} disableFocusRipple={false} size="large" type="button" variant="round">
                                                      <WithStyles(ButtonBase) className="MuiFab-root-429 MuiFab-primary-431 RSFDrawer-closeButton-371" disabled={false} focusRipple={true} focusVisibleClassName="MuiFab-focusVisible-434" onClick={[Function]} style={{...}} on={{...}} component="button" type="button">
                                                        <ButtonBase className="MuiFab-root-429 MuiFab-primary-431 RSFDrawer-closeButton-371" disabled={false} focusRipple={true} focusVisibleClassName="MuiFab-focusVisible-434" onClick={[Function]} style={{...}} on={{...}} component="button" type="button" classes={{...}} centerRipple={false} disableRipple={false} disableTouchRipple={false} tabIndex="0">
                                                          <button className="MuiButtonBase-root-332 MuiFab-root-429 MuiFab-primary-431 RSFDrawer-closeButton-371" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} onClick={[Function]} style={{...}} on={{...}}>
                                                            <span className="MuiFab-label-430">
                                                              <pure(CloseIcon)>
                                                                <CloseIcon>
                                                                  <WithStyles(SvgIcon)>
                                                                    <SvgIcon classes={{...}} color="inherit" component="svg" fontSize="default" viewBox="0 0 24 24">
                                                                      <svg className="MuiSvgIcon-root-439" focusable="false" viewBox="0 0 24 24" color={[undefined]} aria-hidden="true" role="presentation">
                                                                        <path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z" />
                                                                        <path fill="none" d="M0 0h24v24H0z" />
                                                                      </svg>
                                                                    </SvgIcon>
                                                                  </WithStyles(SvgIcon)>
                                                                </CloseIcon>
                                                              </pure(CloseIcon)>
                                                            </span>
                                                            <NoSsr defer={false} fallback={{...}}>
                                                              <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                                                                <TouchRipple center={false} classes={{...}}>
                                                                  <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-391" childFactory={[Function: childFactory]}>
                                                                    <span className="MuiTouchRipple-root-391" />
                                                                  </TransitionGroup>
                                                                </TouchRipple>
                                                              </WithStyles(TouchRipple)>
                                                            </NoSsr>
                                                          </button>
                                                        </ButtonBase>
                                                      </WithStyles(ButtonBase)>
                                                    </Fab>
                                                  </WithStyles(Fab)>
                                                  <div className="RSFDrawer-content-373" />
                                                </div>
                                              </div>
                                            </Paper>
                                          </WithStyles(Paper)>
                                        </Transition>
                                      </EventListener>
                                    </Slide>
                                  </WithTheme(Slide)>
                                </RootRef>
                              </div>
                            </Portal>
                          </Portal>
                        </Modal>
                      </WithStyles(Modal)>
                    </Drawer>
                  </WithStyles(Drawer)>
                </Drawer>
              </inject-Drawer>
            </WithStyles(inject-Drawer)>
          </FilterButton>
        </inject-FilterButton-with-app>
      </WithStyles(inject-FilterButton-with-app)>
    </MuiThemeProviderOld>
  </Provider>
</TestProvider>
`;
